# lichess-board

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  LICENSE  Makefile  README.md  codecov.yml  generate_assets.py  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: demo.py  record_demo.py
src/lichess_board/: __init__.py  __version__.py  renderer.py  widget.py
src/python_chess_board/: __init__.py  renderer.py  widget.py
src/python_chess_board.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: generate_test_images.py  test_anim.py  test_animation_edge_cases.py  test_boundary.py  test_castling.py  test_check.py  test_chess960.py  test_mouse_interactions.py  test_renderer_edge_cases.py  test_ruy_lopez.py  test_undo_signal.py  test_visual_regression.py  test_widget_edge_cases.py
tests/assets/: README.md
