[project]
name = "lichess-board"
dynamic = ["version"]
description = "A PySide6 chess board widget"
authors = [{name = "Leszek", email = "leszek.hanusz@gmail.com"}]
dependencies = [
    "PySide6>=6.10.1,<7",
    "python-chess>=1.999,<2",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-qt==4.5.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "lichess_board.__version__.__version__"}

[tool.setuptools.package-data]
lichess_board = ["py.typed", "assets/*.svg"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
