[project]
name = "lichess-board"
dynamic = ["version"]
description = "A PySide6 chess board widget"
readme = "README.md"
authors = [{name = "Leszek", email = "leszek.hanusz@gmail.com"}]
dependencies = [
    "PySide6>=6.10.1,<7",
    "python-chess>=1.999,<2",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/leszekhanusz/lichess-board"
Issues = "https://github.com/leszekhanusz/lichess-board/issues"

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-cov==6.0.0",
    "pytest-qt==4.5.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "lichess_board.__version__.__version__"}

[tool.setuptools.package-data]
lichess_board = ["py.typed", "assets/*.svg"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/lichess_board",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=50",
]

[tool.coverage.run]
source = ["src/lichess_board"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
